---------------------------------------------------------------------------------------------------
Version: 0.3.12
Date: 2025-04-25
  Features:
    - Added many nuclear isotopes with decay chains (spoiling :3)
    - Added thorium fuel and MOX fuel
  Bugfixes:
    - Fixed sulfur dioxide recipe
    - Fixed some buildings with different fluid inputs
---------------------------------------------------------------------------------------------------
Version: 0.3.11
Date: 2025-04-18
  Features:
    - Added gas power station
    - Added japanese localization thanks to Snow Note
  Changes:
    - Updated some building icons
  Compatibility:
    - Fix for generating icons for venting fluids when using multiple mods thanks to Andromeda
  Bugfixes:
    - Fix that frozen items can be used as nutrients for biochamber and greenhouse
    - Fixed recipes that have more than 2 fluid inputs or outputs for the big crusher (eg palladium recipe)
    - Fixed recipe chain for optical sensor
---------------------------------------------------------------------------------------------------
Version: 0.3.10
Date: 2025-04-11
  Features:
    - Added freezing and thawing recipes
    - Added recipes for creating spoilage
    - Added locale for subgroups and categories
  Changes:
    - Herbarium requires nutrients just like biochamber
    - Updated natric acid recipe chain
  Bugfixes:
    - Fixed algae-spore recipe
    - Fixed agricultural science pack recipe
    - Nitric acid can now be crafted in the advanced chemical plant
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2025-04-04
  Features:
    - New biological / agricultural tech tree
    - Added herbarium
    - Added CN locale thanks to rlcyyg1108
  Changes:
    - Updated woodfarming icon
    - Renamed krastorio bio lab to genetics facility
    - Renamed gyro to gyroscope
    - Pressure tube now also requires seal
    - Updated gun turret recipe
  Balancing: