@@ -147,10 +147,11 @@ TODO for 0.3.12
   - Update nuclear science pack recipe chain
     + Plutonium 240 decay chain (for reactor)
     + Plutonium 239 decay chain (for weapons)
-    - MOX = 7% PO2 + 93% UO2
-    - Uranium 233 = Thorium 232 + Uranium 235
-    - Uranium 233 = Thorium 232 + Plutonium 239
-    - Kovarex enrichment shall be done in breeder reactor
+    + MOX = 7% PO2 + 93% UO2
+    + Uranium 233 = Thorium 232 + Uranium 235
+    + Uranium 233 = Thorium 232 + Plutonium 239
+    + Kovarex enrichment shall be done in breeder reactor
+    - Fix uranium recipe icons using the arrow from nuclear fuel processing
 
 TODO for 0.3.13
   - Update computer science 2 branch of tech tree
